--- a/app/src/main/res/layout/fragment_sehri_iftar.xml
+++ b/app/src/main/res/layout/fragment_sehri_iftar.xml
@@ -80,14 +80,16 @@
         <TextView
             android:id="@+id/location_name"
             android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="20dp"
-            android:fontFamily="@font/montserrat"
-            android:text="Your Location"
+            android:layout_height="42dp"
+            android:layout_margin="10dp"
             android:background="@drawable/layout_background1"
-            android:padding="8dp"
-            android:textSize="20sp"
+            android:ellipsize="end"
+            android:fontFamily="@font/montserrat"
+            android:padding="10dp"
+            android:singleLine="true"
+            android:text="Your Location"
+            android:textColor="#16225F"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
