--- a/app/src/main/res/layout/viewpager_page.xml
+++ b/app/src/main/res/layout/viewpager_page.xml
@@ -16,14 +16,17 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="@font/montserrat"
+        android:gravity="center"
         android:text="يَا حَيُّ يَا قَيُّومُ بِرَحْمَتِكَ أَسْتَغِيثُ"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
+        android:layout_margin="5dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
