--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -17,12 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-                <ImageView
-                    android:id="@+id/back_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="start" android:background="@drawable/button_background"
-                    android:layout_marginEnd="10dp" android:src="@drawable/baseline_chevron_left_24"
+        <ImageView
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:background="@drawable/button_background"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/baseline_chevron_left_24"
                     />
 
         <TextView
@@ -158,6 +160,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:gravity="center"
+            android:visibility="gone"
             android:layout_margin="10dp"
             android:background="@drawable/layout_background1"
             app:layout_constraintTop_toBottomOf="@+id/pre_time_vibrate_layout">
@@ -210,7 +213,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:layout_toStartOf="@+id/forword"
-                android:text="777"
+                android:text="---"
                 android:textStyle="bold"
                 android:textSize="18sp" />
 
@@ -225,6 +228,36 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/pre_alarm_layout_deleted"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/layout_background1"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/pre_time_alarm_layout">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="start"
+                android:text="Remove Pre Alarm"
+                android:textColor="#16225F"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/baseline_auto_delete_24"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
