--- a/app/src/main/res/layout/fragment_home2.xml
+++ b/app/src/main/res/layout/fragment_home2.xml
@@ -63,15 +63,14 @@
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="42dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Sehr Iftar"
-                    android:padding="10dp"
+                    android:text="Sehir Iftar Times"
                     android:textColor="#16225F"
-                    android:background="@drawable/layout_background1"
-                    android:textSize="20sp"
+                    android:gravity="center"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -92,12 +91,15 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="10dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Your Location" android:background="@drawable/layout_background1"
+                    android:text="Your Location"
+                    android:background="@drawable/layout_background1"
                     android:padding="10dp"
                     android:textSize="15sp"
                     android:textStyle="bold"
                     android:textColor="#16225F"
-app:layout_constraintBottom_toBottomOf="@+id/textView"
+                    android:singleLine="true"
+                    android:ellipsize="end"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -125,7 +127,7 @@ app:layout_constraintBottom_toBottomOf="@+id/textView"
                         android:layout_width="150dp"
                         android:layout_height="130dp"
                         android:layout_alignParentTop="true"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/hanfia_backgound"
@@ -174,7 +176,7 @@ app:layout_constraintBottom_toBottomOf="@+id/textView"
                         android:layout_alignParentEnd="true"
                         android:layout_gravity="end"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="25dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/hanfia_backgound"
                         android:elevation="8dp"
@@ -247,7 +249,7 @@ app:layout_constraintBottom_toBottomOf="@+id/textView"
                         android:id="@+id/jaffri_sehri_time_alarm"
                         android:layout_width="150dp"
                         android:layout_height="130dp"
-                        android:layout_marginStart="10dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/hanfia_backgound"
@@ -296,7 +298,7 @@ app:layout_constraintBottom_toBottomOf="@+id/textView"
                         android:layout_alignParentEnd="true"
                         android:layout_gravity="end"
                         android:layout_marginTop="10dp"
-                        android:layout_marginEnd="10dp"
+                        android:layout_marginEnd="25dp"
                         android:layout_marginBottom="10dp"
                         android:background="@drawable/hanfia_backgound"
                         android:elevation="8dp"
@@ -408,7 +410,10 @@ app:layout_constraintBottom_toBottomOf="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_margin="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="14dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/baseline_notifications_none_24"
                         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
@@ -471,8 +476,10 @@ app:layout_constraintBottom_toBottomOf="@+id/textView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_margin="10dp"
-
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="14dp"
+                        android:layout_marginBottom="10dp"
                         android:src="@drawable/baseline_notifications_none_24"
                         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
