--- a/app/src/main/res/layout/fragment_qibla_direction.xml
+++ b/app/src/main/res/layout/fragment_qibla_direction.xml
@@ -83,16 +83,18 @@
                 android:id="@+id/location_place"
                 android:layout_width="150dp"
                 android:layout_height="42dp"
-                android:layout_alignParentEnd="true"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:background="@drawable/layout_background1"
                 android:fontFamily="@font/montserrat"
-                android:padding="8dp"
                 android:text="Your Location"
-                android:textColor="#16225F"
-                android:textSize="20sp"
+                android:background="@drawable/layout_background1"
+                android:padding="10dp"
+                android:textSize="15sp"
                 android:textStyle="bold"
+                android:textColor="#16225F"
+                android:singleLine="true"
+                android:ellipsize="end"
+                app:layout_constraintBottom_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
